# waterlink

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: getting-started.md  index.md
docs/guide/: events.md  filters.md  metadata-cleaning.md  nodes.md  persistence-observability.md  player.md
examples/: advanced_bot.py  basic_bot.py
src/waterlink/: __init__.py  _compat.py  _version.py  autoplay.py  backoff.py  cache.py  crossfade.py  errors.py  events.py  filters.py  formatting.py  manager.py  metadata.py  metrics.py  node.py  normalize.py  persistence.py  player.py  plugins.py  pool.py  queue.py  rest.py  search.py  tracing.py  tracks.py  typing.py  voice.py  watchdog.py  websocket.py
tests/: test_backoff.py  test_cache.py  test_events.py  test_filters.py  test_formatting.py  test_metadata.py  test_persistence.py  test_pool.py  test_queue.py  test_tracks_and_search.py
